# dotfiles

./: .Xresources  .bash_aliases  .bash_profile  .bashrc  .blackboxrc  .cwmrc  .emacs  .fzf.bash  .gitignore  .inputrc  .lesskey  .profile  .shrc  .tigrc  .tmux.conf  .vimrc  .xinitrc  ArchLinux.sh  README.md  VoidLinux.sh  emoji_list  install.sh  list.txt
.config/: config.py  screenkey.json
.config/alacritty/: alacritty.toml  alacritty.yml  alacritty.yml.1659268263951.bak  alacritty.yml.1660958013636.bak
.config/bspwm/: bspwmrc
.config/cava/: config
.config/cmus/: autosave
.config/coc/: commands
.config/discord/: settings.json
.config/dunst/: dunstrc
.config/dwl/: config.def.h  dwl.c
.config/foot/: foot.ini
.config/somebar/: .editorconfig  CHANGELOG.md  LICENSE  README.md  meson.build  somebar.1
.config/somebar/.builds/: archlinux.yml  freebsd.yml
.config/somebar/contrib/: clickable-tags-using-wtype.patch  colorless-status.patch  disable-window-title.patch  dwm-like-tag-indicator.patch  hide-vacant-tags.patch  indicator-size-props.patch  ipc.patch  markup-in-status-messages.patch  show-status-on-selected-monitor.patch
.config/somebar/protocols/: meson.build  wlr-layer-shell-unstable-v1.xml
.config/somebar/src/: bar.cpp  bar.hpp  common.hpp  config.def.hpp  line_buffer.hpp  main.cpp  shm_buffer.cpp  shm_buffer.hpp
.dwm/: autostart.sh
.fonts/: profontn.otb
.w3m/: history
assets/: dwm.webm
dwl/: Makefile  config.def.h  dwl.c
etc/: resolv.conf
libvirt/: libvirt.conf  libvirtd.conf  qemu.conf
scripts/: archVm.sh  bootUSB.sh  makeVm.sh  recall.sh  stage2.sh  voidVm.sh
src/: alpha-and-systray.diff
xorg.conf.d/: 00-keyboard.conf  30-touchpad.conf
(+555 files in other folders)
